--- a/css/preview.html
+++ b/css/preview.html
@@ -112,43 +112,18 @@
 
 <div class="preview-content">
 <table>
-
 <caption>Lorem ipsum</caption>
-
 <thead>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </thead>
-
 <tfoot>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </tfoot>
-
 <tbody>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
 </tbody>
-
 </table>
 </div>
 
@@ -159,12 +134,12 @@
 <legend>Lorem ipsum</legend>
 
 <input type="text" value="Lorem ipsum">
-<input type="search" value="Lorem ipsum">
+<input type="search" value="Lorem ipsum"><br>
 <label><input type="checkbox">Lorem ipsum</label>
-<label><input type="radio">Lorem ipsum</label>
+<label><input type="radio">Lorem ipsum</label><br>
 <input type="file">Lorem ipsum
 <input type="submit" value="Lorem ipsum">
-<button>Lorem ipsum</button>
+<button>Lorem ipsum</button><br>
 
 <select>
 <option>Lorem ipsum</option>
@@ -176,7 +151,7 @@
 <option>Lorem ipsum</option>
 <option>Lorem ipsum</option>
 <option>Lorem ipsum</option>
-</select>
+</select><br>
 
 <textarea>Lorem ipsum</textarea>
 
@@ -370,103 +345,43 @@
 <div class="preview-content">
 <table class="table">
 <thead>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </thead>
 <tfoot>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </tfoot>
 <tbody>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
 </tbody>
 </table>
 
 <table class="table-row">
 <thead>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </thead>
 <tfoot>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </tfoot>
 <tbody>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
 </tbody>
 </table>
 
 <table class="table-column">
 <thead>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </thead>
 <tfoot>
-<tr>
-<th>Lipsum</th>
-<th>Lipsum</th>
-<th>Lipsum</th>
-</tr>
+<tr><th>Lipsum</th><th>Lipsum</th><th>Lipsum</th></tr>
 </tfoot>
 <tbody>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
-<tr>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-<td>Lorem ipsum</td>
-</tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
+<tr><td>Lorem ipsum</td><td>Lorem ipsum</td><td>Lorem ipsum</td></tr>
 </tbody>
 </table>
 </div>
