--- a/src/test/index.html
+++ b/src/test/index.html
@@ -8,7 +8,7 @@
 
 <test-component title="Test"></test-component>
 
-<script src="../../dist/_test/main.js" type="module"></script>
+<script src="../../dist/test/main.js" type="module"></script>
 
 </body>
 </html>
