--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -5,6 +5,6 @@
 <title>Demo</title>
 </head>
 <body>
-<script src="../../dist/demo/main.js" type="module"></script>
+<script src="/dist/demo/main.js" type="module"></script>
 </body>
 </html>
