--- a/src/test/index.html
+++ b/src/test/index.html
@@ -5,6 +5,6 @@
 <title>Test</title>
 </head>
 <body>
-<script src="/test/main.js" type="module"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
