--- a/tests/app/index.html
+++ b/tests/app/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="/main.js" type="module"></script>
+  <script src="/mod.bundle.js" type="module"></script>
 </body>
 
 </html>
