--- a/tests/demo/index.html
+++ b/tests/demo/index.html
@@ -7,6 +7,7 @@
 
   <body>
     <p><a href="/mod.bundle.js">mod.bundle.js</a></p>
+    <p><a href="/utils.bundle.js">utils.bundle.js</a></p>
     <p><a href="/.playground">Playground</a></p>
   </body>
 </html>
