--- a/tests/demo/index.html
+++ b/tests/demo/index.html
@@ -8,6 +8,6 @@
   <body>
     <p><a href="/mod.bundle.js">mod.bundle.js</a></p>
     <p><a href="/util.bundle.js">util.bundle.js</a></p>
-    <p><a href="/.playground">Playground</a></p>
+    <p><a href=".playground">Code playground</a></p>
   </body>
 </html>
