Update test code

--- a/tests/playground/index.html
+++ b/tests/playground/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
+    <title>Test</title>
   </head>
 
   <body>
-    <p><a href="/mod.bundle.js">mod.bundle.js</a></p>
-    <p><a href="/util.bundle.js">util.bundle.js</a></p>
     <p><a href=".playground">Code playground</a></p>
   </body>
 </html>
